2000-01-17  Michael Natterer  <mitch@gimp.org>

	* libgimp/gimpcolorbutton.c: emit the "color_changed" signal
	whenever the user selects "Use FG/BG Color" from the popup menu.

	* libgimp/gimpwidgets.c: gimp_table_attach_aligned(): allow the
	function to be called with label == NULL.

	* plug-ins/AlienMap/AlienMap.c
	* plug-ins/AlienMap2/AlienMap2.c
	* plug-ins/common/CEL.c
	* plug-ins/common/CML_explorer.c
	* plug-ins/common/apply_lens.c
	* plug-ins/common/checkerboard.c
	* plug-ins/common/engrave.c
	* plug-ins/common/exchange.c
	* plug-ins/common/gauss_iir.c
	* plug-ins/common/gauss_rle.c
	* plug-ins/common/illusion.c
	* plug-ins/common/max_rgb.c
	* plug-ins/common/mblur.c
	* plug-ins/common/oilify.c
	* plug-ins/common/sel_gauss.c
	* plug-ins/common/shift.c
	* plug-ins/common/smooth_palette.c
	* plug-ins/common/sparkle.c
	* plug-ins/common/video.c
	* plug-ins/common/vpropagate.c
	* plug-ins/common/warp.c
	* plug-ins/sgi/sgi.c: more ui updates.

2000-01-17  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>

	* plug-ins/common/csource.c
	* plug-ins/common/header.c
	* plug-ins/common/winclipboard.c
	* po-plug-ins/POTFILES.in: added gettext support.

Sat Jan 16 19:58:55 CET 2000  Stanislav Brabec  <utx@penguin.cz>

	* plug-ins/common/shift.c: Typo fix.

2000-01-16  Michael Natterer  <mitch@gimp.org>

	* app/layers_dialog.c: oops, the "Add Layer Mask" dialog contained
	nothing after my last change.

	* libgimp/gimpwidgets.c: gimp_table_attach_aligned() sets the
	yalign of the widget to 0.5 instead of 1.0.

	* plug-ins/common/align_layers.c
	* plug-ins/common/apply_lens.c
	* plug-ins/common/blinds.c
	* plug-ins/common/blur.c
	* plug-ins/common/cubism.c
	* plug-ins/common/decompose.c
	* plug-ins/common/flarefx.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/jigsaw.c
	* plug-ins/common/mail.c
	* plug-ins/common/nova.c
	* plug-ins/common/randomize.c
	* plug-ins/common/ripple.c
	* plug-ins/common/scatter_hsv.c
	* plug-ins/common/shift.c
	* plug-ins/common/sparkle.c