@@ -16,4 +16,4 @@ files:
 
 install-data-local:
 	rm -f $(helpdatadir)/dialogs
-	ln -sf ../../../dialogs $(helpdatadir)/dialogs
+	$(LN_S) ../../../dialogs $(helpdatadir)/dialogs
