@@ -23,6 +23,6 @@ files:
 
 install-data-local:
 	rm -f $(helpdatadir)/dialogs
-	ln -sf ../dialogs/paths $(helpdatadir)/dialogs
+	$(LN_S) ../dialogs/paths $(helpdatadir)/dialogs
 	rm -f $(helpdatadir)/filters
-	ln -sf ../filters $(helpdatadir)/filters
+	$(LN_S) ../filters $(helpdatadir)/filters
