@@ -25,8 +25,8 @@ files:
 
 install-data-local:
 	rm -f $(helpdatadir)/dialogs
-	ln -sf ../dialogs $(helpdatadir)/dialogs
+	$(LN_S) ../dialogs $(helpdatadir)/dialogs
 	rm -f $(helpdatadir)/file
-	ln -sf ../file $(helpdatadir)/file
+	$(LN_S) ../file $(helpdatadir)/file
 	rm -f $(helpdatadir)/filters
-	ln -sf ../filters $(helpdatadir)/filters
+	$(LN_S) ../filters $(helpdatadir)/filters
